bdr.BDR.scala.error
Compilation error:
BDR:5: error: identifier expected but string literal found.
  }else if(readMessage():"L"){
                         ^BDR:31: error: ')' expected but '}' found.
} 
^